@@ -1049,7 +1049,8 @@ Player::Run() noexcept
 			   calculate how many chunks will be required
 			   for it */
 			cross_fade_chunks =
-				pc.cross_fade.Calculate(dc.total_time,
+				pc.cross_fade.Calculate(pc.total_time,
+							dc.total_time,
 							dc.replay_gain_db,
 							dc.replay_gain_prev_db,
 							dc.GetMixRampStart(),
